Refactored Block.NamespaceSize to BlockSizes.
