# cmd/api/handler/responses/block.go
@@ -15,7 +15,7 @@ type Block struct {
 	VersionApp         string    `example:"1"                                                                json:"version_app"          swaggertype:"string"`
 	TxCount            uint64    `example:"12"                                                               json:"tx_count"             swaggertype:"integer"`
 	EventsCount        uint64    `example:"18"                                                               json:"events_count"         swaggertype:"integer"`
-	NamespaceSize      uint64    `example:"12354"                                                            json:"namespace_size"       swaggertype:"integer"`
+	NamespaceSize      uint64    `example:"12354"                                                            json:"blobs_size"           swaggertype:"integer"`
 	Fee                string    `example:"28347628346"                                                      json:"fee"                  swaggertype:"string"`
 	Hash               string    `example:"652452A670018D629CC116E510BA88C1CABE061336661B1F3D206D248BD558AF" json:"hash"                 swaggertype:"string"`
 	ParentHash         string    `example:"652452A670018D629CC116E510BA88C1CABE061336661B1F3D206D248BD558AF" json:"parent_hash"          swaggertype:"string"`
@@ -40,7 +40,7 @@ func NewBlock(block storage.Block) Block {
 		VersionApp:         block.VersionApp,
 		TxCount:            block.TxCount,
 		EventsCount:        block.EventsCount,
-		NamespaceSize:      block.NamespaceSize,
+		NamespaceSize:      block.BlobsSize,
 		Fee:                block.Fee.String(),
 		Hash:               hex.EncodeToString(block.Hash),
 		ParentHash:         hex.EncodeToString(block.ParentHash),
